--- a/app/globals.css
+++ b/app/globals.css
@@ -40,12 +40,13 @@
   --card-border-rgb: 131, 134, 135;
 
   background-color: #E1DFDD;
+  color: #000;
 
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    /* --foreground-rgb: 255, 255, 255; */
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
@@ -89,7 +90,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
   background: linear-gradient(
       to bottom,
       transparent,
